<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calc</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="choice_profile">Select</string>
    <string name="new_profile">New</string>
    <string name="query_paper">Query</string>
    <string name="next">Next</string>
    <string name="end">End</string>
    <string name="profile_name">Name:</string>
    <string name="mode_total_time">Total time</string>
    <string name="mode_per_time">Per time</string>
    <string name="time_set">Time Set</string>
    <string name="time_hour">Hour</string>
    <string name="time_min">Min</string>
    <string name="time_sec">Sec</string>
    <string name="add_set">Add Set</string>
    <string name="enable">Enable</string>
    <string name="range">Range:</string>
    <string name="to">to</string>
    <string name="op_nums">Num:</string>
    <string name="bracket">Bracket</string>
    <string name="sub_set">Sub Set</string>
    <string name="mul_set">Mul Set</string>
    <string name="mix_set">Mix Set</string>
    <string name="add">Add</string>
    <string name="sub">Sub</string>
    <string name="mul">Mul</string>
    <string name="num_del">Del</string>
    <string name="num_clr">Clr</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="result">Mark</string>
    <string name="total_num">Num:</string>
    <string name="total_time">Time:</string>
    <string name="total_correct">Correct:</string>
    <string name="total_wrong">Wrong:</string>
    <string name="invalid_mode">Please choose a mode.</string>
    <string name="hour_empty">Hour is empty.</string>
    <string name="min_empty">Min is empty.</string>
    <string name="sec_empty">Sec is empty.</string>
    <string name="from_empty">From is empty.</string>
    <string name="to_empty">To is empty.</string>
    <string name="num_empty">Num is empty.</string>
    <string name="invalid_from_to">From must smaller than To.</string>
    <string name="invalid_num">Num must between 2 and 5.</string>
    <string name="invalid_mix">Select at least two operations.</string>
    <string name="invalid_mixnum">Num must between 3 and 5.</string>
    <string name="start_exam">Press %1$s to start.</string>
    <string name="remain_time">Remian time:</string>
    <string name="equal">=</string>
    <string name="no_enabled">No method enabled.</string>
    <string name="mark_content">Total %1$d Correct %2$d Wrong %3$d</string>
    <string name="edit">Edit</string>
    <string name="start">Start</string>
    <string name="delete">Del</string>
    <string name="detail">Detail</string>
    <string name="review">Review</string>
    <string name="start_time">Start:</string>
    <string name="end_time">End:</string>
    <string name="total_num_txt">Total:</string>
    <string name="correct_num_txt">Correct:</string>
    <string name="used_time">Time:</string>
    <string name="div">/</string>
    <string name="correct_answer">Correct:</string>
    <string name="mode_txt">Mode:</string>
    <string name="total_num_empty">Num is empty.</string>
    <string name="carry">No Carry</string>
    <string name="two_add_single">Two add single</string>
    <string name="two_add_tens">Two add tens</string>
    <string name="tens_add">Tens add</string>
    <string name="borrow">No Borrow</string>
    <string name="two_sub_single">Two sub single</string>
    <string name="two_sub_tens">Two sub tens</string>
    <string name="tens_sub">Tens sub</string>
    <string name="invalid_number">Please input a valid number.</string>

</resources>
