<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mix_set" />
        <CheckBox
        android:id="@+id/enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable" />
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
		<CheckBox
	        android:id="@+id/mix_add"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/add" />
		<CheckBox
	        android:id="@+id/mix_sub"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sub" />
		<CheckBox
	        android:id="@+id/mix_mul"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mul" />
		
	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/op_nums" />
	        <EditText
	            android:id="@+id/op_nums"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" >

	            <requestFocus />
	        </EditText>

	</LinearLayout>
	<CheckBox
        android:id="@+id/bracket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bracket" />
    <View android:layout_weight="4" android:layout_width="wrap_content" android:layout_height="wrap_content"/>


    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
    <View android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
