<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_set" />
        <CheckBox
        android:id="@+id/enable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable" />
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/range" />
	        <EditText
	            android:id="@+id/from_num"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:selectAllOnFocus="true"
	            android:inputType="numberSigned" >

	        </EditText>
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/to" />

	        <EditText
	            android:id="@+id/to_num"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:selectAllOnFocus="true"
	            android:inputType="numberSigned" >

	        </EditText>

	</LinearLayout>
    	<CheckBox
        android:id="@+id/borrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/borrow" />
	<CheckBox
        android:id="@+id/two_sub_single"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_sub_single" />
	<CheckBox
        android:id="@+id/two_sub_tens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_sub_tens" />
	<CheckBox
        android:id="@+id/tens_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tens_sub" />
    <View android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
