<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/remain_time"
	        android:layout_gravity="left"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        />
	        <TextView
	        android:id="@+id/remain_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	         />
	        <View android:layout_width="0dp" android:layout_height="1dp" android:layout_weight="1"/>
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/total_num"
	        android:layout_gravity="right"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        />
	        <TextView
	        android:id="@+id/total_num"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="20dp"
	         />
	</LinearLayout>
	<View android:layout_width="1dp" android:layout_height="0dp" android:layout_weight="1"/>
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    android:orientation="horizontal"
	    >
	    <TextView
	    android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:textSize="@dimen/ques_size"
         />
	    <TextView 
	        android:layout_width="0dp" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" 
	        android:textSize="@dimen/ques_size"
	        android:text="@string/equal"
	        android:gravity="center"
	        />
	    <TextView
	    android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textSize="@dimen/ques_size"
         />

	</LinearLayout>
	<View android:layout_width="1dp" android:layout_height="0dp" android:layout_weight="1"/>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	    android:id="@+id/num_1"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_1"
         />
	    <Button
	    android:id="@+id/num_2"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_2"
         />
	    <Button
	    android:id="@+id/num_3"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_3"
         />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	    android:id="@+id/num_4"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_4"
         />
	    <Button
	    android:id="@+id/num_5"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_5"
         />
	    <Button
	    android:id="@+id/num_6"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_6"
         />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	    android:id="@+id/num_7"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_7"
         />
	    <Button
	    android:id="@+id/num_8"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_8"
         />
	    <Button
	    android:id="@+id/num_9"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_9"
         />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <Button
	    android:id="@+id/num_0"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_0"
         />
	     <Button
	    android:id="@+id/num_del"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_del"
         />
	      <Button
	    android:id="@+id/num_clr"
        android:layout_width="@dimen/pad_size"
        android:layout_height="@dimen/pad_size"
        android:gravity="center"
        android:background="@drawable/num_pad"
        android:text="@string/num_clr"
         />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
		<Button
		    android:id="@+id/end"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/end" />
		<View android:layout_width="0dp" android:layout_height="dp" android:layout_weight="1"/>
		<Button
		    android:id="@+id/next"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
	    android:text="@string/next" />
	</LinearLayout>
</LinearLayout>
