<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result" />
    
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_num" />
	    <TextView
	    android:text="@+id/total_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time" />
	    <TextView
	    android:text="@+id/total_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_correct" />
	    <TextView
	    android:text="@+id/total_correct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

	</LinearLayout>
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_wrong" />
	    <TextView
	    android:text="@+id/total_wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

	</LinearLayout>

    <View android:layout_weight="4" />


    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
    <View android:layout_weight="1" />
</LinearLayout>
