<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="top|center"
    tools:context="com.example.calc.MainActivity" >
    <View android:layout_weight="1"/>
	<LinearLayout 
	    android:orientation="horizontal"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    >
	    <Button
	        android:id="@+id/choice_profile"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/choice_profile" />
		<View android:layout_weight="1"/>
	    <Button
	        android:id="@+id/new_profile"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/new_profile" />
		<View android:layout_weight="1"/>
	    <Button
	        android:id="@+id/query_paper"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/query_paper" />
	</LinearLayout>
	<View android:layout_weight="2"/>
	<Button
	    android:id="@+id/next"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/next" />
	<View android:layout_weight="1"/>
</LinearLayout>
