<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_set" />
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	        <EditText
	            android:id="@+id/time_hour"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" >

	            <requestFocus />
	        </EditText>
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/time_hour" />

	        <EditText
	            android:id="@+id/time_min"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" >

	            <requestFocus />
	        </EditText>

	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/time_min" />
	        <EditText
	            android:id="@+id/time_sec"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:inputType="numberDecimal" >

	            <requestFocus />
	        </EditText>
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/time_sec" />
	</LinearLayout>

    <View android:layout_weight="4" android:layout_width="wrap_content" android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next" />
    <View android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
